# nvs_2018-19

./: .gitignore  .hgignore
.hg/: dirstate  last-message.txt  undo.backup.dirstate  undo.desc  undo.dirstate
.hg/cache/: branch2-served  rbc-revs-v1  tags2-visible
.hg/store/: 00changelog.i  00manifest.i  fncache  undo  undo.backup.fncache  undo.phaseroots
.hg/store/data/: _l_i_c_e_n_s_e.i  ~2ehgignore.i
.hg/store/data/01__cppintro/: _c_make_lists.txt.i  roman2dec.cpp.i
.hg/store/data/02__cppintro2/: _c_make_lists.txt.i  main.cpp.i  primes.cpp.i  sieve.cpp.i
.hg/store/data/03__cppintro3/: _c_make_lists.txt.i  meson.build.i
.hg/store/data/03__cppintro3/src/: periods.cpp.i
.hg/store/data/03__cppintro3/string__testing/: meson.build.i
.hg/store/data/04__processes/: meson.build.i
.hg/store/data/04__processes/src/: aba.cpp.i  charout.cpp.i
.hg/store/data/05__threads/: meson.build.i
.hg/store/data/05__threads/include/: _car.hpp.i
.hg/store/data/05__threads/src/: _car.cpp.i  main.cpp.i
.hg/store/data/06__sync1/: meson.build.i
.hg/store/data/06__sync1/include/: _account.hpp.i
.hg/store/data/06__sync1/src/: _account.cpp.i  main.cpp.i
.hg/store/data/07__sync2/: _c_make_lists.txt.i  meson.build.i
.hg/store/data/07__sync2/include/: _work_packet.h.i  _work_queue.h.i
.hg/store/data/07__sync2/src/: _work_packet.cpp.i  _work_queue.cpp.i  loadsim.cpp.i  main.cpp.i
.hg/store/data/08__sync3/: meson.build.i
.hg/store/data/08__sync3/include/: _philosopher.h.i  _semaphore.h.i  _utils.h.i
.hg/store/data/08__sync3/src/: _philosopher.cpp.i  _semaphore.cpp.i  _utils.cpp.i  main.cpp.i  utils.cpp.i
.hg/store/data/09__future/: meson.build.i
.hg/store/data/10__berkeley/: meson.build.i
.hg/store/data/11__daytime/: meson.build.i  meson__options.txt.i
.hg/store/data/12__time/: meson.build.i  meson__options.txt.i
01_cppintro/: CMakeLists.txt  roman2dec.cpp
02_cppintro2/: CMakeLists.txt  primes.cpp  sieve.cpp
03_cppintro3/: meson.build
03_cppintro3/src/: periods.cpp
03_cppintro3/string_testing/: meson.build
03_cppintro3/string_testing/src/: main.cpp
04_processes/: meson.build
04_processes/src/: aba.cpp  charout.cpp
05_threads/: meson.build
05_threads/include/: Car.hpp
05_threads/src/: Car.cpp  main.cpp
06_sync1/: CMakeLists.txt  meson.build
06_sync1/include/: Account.hpp
06_sync1/src/: Account.cpp  main.cpp
07_sync2/: CMakeLists.txt  meson.build
07_sync2/include/: WorkPacket.h  WorkQueue.h
07_sync2/src/: WorkPacket.cpp  WorkQueue.cpp  loadsim.cpp
08_sync3/: meson.build
08_sync3/include/: Philosopher.h  Semaphore.h  Utils.h
08_sync3/src/: Philosopher.cpp  Semaphore.cpp  Utils.cpp  main.cpp
09_future/: meson.build
09_future/include/: calc_factors.h
09_future/src/: main.cpp
10_berkeley/: meson.build
10_berkeley/include/: channel.h  clipp.h  clock.h  pipe.h  timemaster.h  timeslave.h
10_berkeley/src/: clock.cpp  main.cpp  timemaster.cpp  timeslave.cpp
11_daytime/: meson.build  meson_options.txt
11_daytime/src/: includes.cpp  main.cpp
11_daytime/src/daytime_client/: main.cpp
11_daytime/src/daytime_server/: main.cpp
12_time/: meson.build
12_time/include/: timeutils.h
12_time/src/time_client/: main.cpp
12_time/src/time_server/: main.cpp
(+24 files in other folders)
